ags (0.6.40)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed memory leak in ags_generic_preferences.c but wasn't that bad

ags (0.6.39)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed stack-corruption caused by integer overflow while doing variable typo

ags (0.6.38)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* work-around dead-lock as doing ipatch_file_identify_open() from different threads

ags (0.6.37)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed missing GMainContext acquire in ags_gui_thread.c
	* fixed NULL pointer accessing by moving code
	* fixed buffer-overflow because of swapped indices in ags_recycling.c

ags (0.6.36)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed introduced bug in ags_ffplayer.c because of missing mapping recalls

ags (0.6.35)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed SIGINT while accessing recycling_container being NULL in ags_channel_init_recall()

ags (0.6.34)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed wrong acquisition of AgsAudioSignal in ags_recall_recycling.c

ags (0.6.33)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed restore of AgsFFPlayer
	* implemented AgsStartReadFile task
	* modified startup of thread and file launch as reading from files

ags (0.6.32)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed missing offset of loop audio data with lower frame count

ags (0.6.31)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed loop audio data with lower frame count than buffer size
	* fixed memory corruption with freed list in ags_notation_cut_selection()
	* fixed toggling toolbar editing tool after restoring from XML file
	* work-around deleting GList notes of AgsNotation

ags (0.6.30)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed AgsFFPlayer loading Soundfont2

ags (0.6.29)
